// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RepositoriesList /> renders a loading spinner if the loading flag is set 1`] = `
<div
  className="wrapper"
>
  <div
    className="component__Wrapper-sc-1v3e81z-0 gjQjkD"
  >
    <div
      className="MuiCircularProgress-root-1 MuiCircularProgress-colorPrimary-4 MuiCircularProgress-indeterminate-3"
      role="progressbar"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg-6"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle-7 MuiCircularProgress-circleIndeterminate-9"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<RepositoriesList /> renders an error message if an error occurred 1`] = `
<div
  className="wrapper"
>
  <ul
    className="list"
  >
    <li>
      <span>
        Something went wrong, please try again!
      </span>
    </li>
  </ul>
</div>
`;

exports[`<RepositoriesList /> renders nothing if the repository list is empty 1`] = `null`;

exports[`<RepositoriesList /> renders the repository list if the list is not empty 1`] = `
<div
  className="wrapper"
>
  <ul
    className="list"
  >
    <li>
      <div
        className="wrapper"
      >
        <a
          className="component__A-sc-1qxsdu7-0 component__RepoLink-sc-2iw2dp-0 cbLOVz"
          href="https://github.com/alexander-elgin/ta-maxlength"
          target="_blank"
        >
          alexander-elgin/ta-maxlength
        </a>
        <a
          className="component__A-sc-1qxsdu7-0 component__IssuesLink-sc-1rshot1-0 ezZxTa"
          href="https://github.com/alexander-elgin/ta-maxlength/issues"
          target="_blank"
        >
          <svg
            className="icon"
            height="1em"
            width="0.875em"
          >
            <path
              d="M7 2.3c3.14 0 5.7 2.56 5.7 5.7S10.14 13.7 7 13.7 1.3 11.14 1.3 8s2.56-5.7 5.7-5.7m0-1.3C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7S10.86 1 7 1z m1 3H6v5h2V4z m0 6H6v2h2V10z"
            />
          </svg>
          <span>
            3
          </span>
        </a>
      </div>
    </li>
    <li>
      <div
        className="wrapper"
      >
        <a
          className="component__A-sc-1qxsdu7-0 component__RepoLink-sc-2iw2dp-0 cbLOVz"
          href="https://github.com/rasp3175/meetermaid"
          target="_blank"
        >
          rasp3175/meetermaid
        </a>
        <a
          className="component__A-sc-1qxsdu7-0 component__IssuesLink-sc-1rshot1-0 ezZxTa"
          href="https://github.com/rasp3175/meetermaid/issues"
          target="_blank"
        >
          <svg
            className="icon"
            height="1em"
            width="0.875em"
          >
            <path
              d="M7 2.3c3.14 0 5.7 2.56 5.7 5.7S10.14 13.7 7 13.7 1.3 11.14 1.3 8s2.56-5.7 5.7-5.7m0-1.3C3.14 1 0 4.14 0 8s3.14 7 7 7 7-3.14 7-7S10.86 1 7 1z m1 3H6v5h2V4z m0 6H6v2h2V10z"
            />
          </svg>
          <span>
            0
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;
